--- a/assets/css/book.css
+++ b/assets/css/book.css
@@ -76,6 +76,54 @@
   width: 220px;
 }
 
+.book-actions-list {
+  background: var(--white);
+  border-radius: 5px;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.1);
+  font-size: var(--subhead-font-size);
+  line-height: var(--subhead-leading);
+}
+
+.book-actions-list>li {
+  border-bottom: 1px solid var(--purple-1);
+  text-align: center;
+}
+
+
+.book-actions-list>li:last-child {
+  border-bottom: 0;
+}
+
+.book-actions-list a {
+  color: var(--purple-5);
+  text-decoration: none;
+}
+
+.book-actions-button {
+  display: block;
+  padding: 12px;
+}
+
+.book-actions-button:hover {
+  background: var(--purple-0);
+  color: var(--purple-6);
+}
+
+.book-actions-list>li:last-child a:hover {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.book-actions-must-authenticate {
+  color: var(--paper-5);
+  padding: 12px;
+}
+
+.book-actions-must-authenticate p:first-child {
+  color: var(--purple-7);
+  margin-bottom: 8px;
+}
+
 .book-reviews {
   clear: both;
 }
