--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -23,6 +23,28 @@
   --gray-8: #32383f;
   --gray-9: #24292f;
 
+  --red-0: #ffebe9;
+  --red-1: #ffcecb;
+  --red-2: #ffaba8;
+  --red-3: #ff8182;
+  --red-4: #fa4549;
+  --red-5: #cf222e;
+  --red-6: #a40e26;
+  --red-7: #82071e;
+  --red-8: #660018;
+  --red-9: #4c0014;
+
+  --green-0: #dafbe1;
+  --green-1: #aceebb;
+  --green-2: #6fdd8b;
+  --green-3: #4ac26b;
+  --green-4: #2da44e;
+  --green-5: #1a7f37;
+  --green-6: #116329;
+  --green-7: #044f1e;
+  --green-8: #003d16;
+  --green-9: #002d11;
+
   --blue-0: #ddf4ff;
   --blue-1: #b6e3ff;
   --blue-2: #80ccff;
