--- a/lib/bookify_web/controllers/user_html/new.html.heex
+++ b/lib/bookify_web/controllers/user_html/new.html.heex
@@ -1,19 +1,22 @@
-<h2><%= gettext("Register") %></h2>
+<section class="auth">
+  <h2 class="section-title"><%= gettext("Register") %></h2>
 
-<div class="form-group">
-  <%= form_for @changeset, Routes.user_path(@conn, :create), fn f -> %>
-    <div class="input-field">
-      <%= text_input(f, :name, placeholder: gettext("Name"), class: "white gray-text") %>
+  <%= form_for @changeset, Routes.user_path(@conn, :create), [class: "form auth-form"], fn f -> %>
+    <div class="form-row">
+      <%= label(f, :name, gettext("Name")) %>
+      <%= text_input(f, :name, autofocus: true) %>
       <%= error_tag(f, :name) %>
     </div>
-    <div class="input-field">
-      <%= text_input(f, :email, placeholder: gettext("Email"), class: "form-control") %>
+    <div class="form-row">
+      <%= label(f, :email, gettext("Email")) %>
+      <%= email_input(f, :email) %>
       <%= error_tag(f, :email) %>
     </div>
-    <div class="input-field">
-      <%= password_input(f, :password, placeholder: gettext("Password"), class: "form-control") %>
+    <div class="form-row">
+      <%= label(f, :password, gettext("Password")) %>
+      <%= password_input(f, :password) %>
       <%= error_tag(f, :password) %>
-      <span class="helper-text">
+      <div class="form-field-notes">
         <%= gettext("Password format:") %>
         <ul>
           <li><%= gettext("At least 8 characters long") %></li>
@@ -26,15 +29,22 @@
             ) %>
           </li>
         </ul>
-      </span>
+      </div>
     </div>
-    <div class="input-field">
-      <%= password_input(f, :password_confirmation,
-        placeholder: gettext("Confirm password"),
-        class: "form-control"
-      ) %>
+    <div class="form-row">
+      <%= label(f, :password_confirmation, gettext("Confirm password")) %>
+      <%= password_input(f, :password_confirmation) %>
       <%= error_tag(f, :password_confirmation) %>
     </div>
-    <%= submit(gettext("Register"), class: default_btn()) %>
+    <div class="form-actions">
+      <%= submit(gettext("Register"), class: "button") %>
+    </div>
   <% end %>
-</div>
+
+  <ul class="auth-actions">
+    <li>
+      <p><%= gettext("Already have an account?") %></p>
+      <p><%= link(gettext("Sing In"), to: Routes.auth_path(@conn, :new)) %></p>
+    </li>
+  </ul>
+</section>
