Make new review modal work again

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -17,5 +17,7 @@
 @import "empty.css";
 @import "icon.css";
 @import "list.css";
+@import "modal.css";
+@import "new-review.css";
 @import "reviews-list.css";
 @import "search.css";
