--- a/lib/bookify_web/controllers/book_html/show.html.heex
+++ b/lib/bookify_web/controllers/book_html/show.html.heex
@@ -38,102 +38,115 @@
 
   <section class="book-actions">
     <%= if @conn.assigns[:current_user] do %>
-      <%= if Lists.book_in_list?(
-        current_user(@conn).id,
-        want_to_read_list_type(),
-        @book.id
-        ) do %>
-        <%= link(gettext("Remove from wishlist"),
-          to: Routes.list_path(@conn, :remove_book_from_list, want_to_read_list_type(), @book.id),
-          class: cancel_btn()
-        ) %>
-      <% else %>
-        <%= link(gettext("Want to Read"),
-          to: Routes.list_path(@conn, :add_book_to_list, want_to_read_list_type(), @book.id),
-          class: default_btn()
-        ) %>
-      <% end %>
-
-      <%= if Lists.book_in_list?(
-        current_user(@conn).id,
-        reading_list_type(),
-        @book.id
-        ) do %>
-        <%= link(gettext("Remove from Reading"),
-          to: Routes.list_path(@conn, :remove_book_from_list, reading_list_type(), @book.id),
-          class: cancel_btn()
-        ) %>
-      <% else %>
-        <%= link(gettext("Reading"),
-          to: Routes.list_path(@conn, :add_book_to_list, reading_list_type(), @book.id),
-          class: default_btn()
-        ) %>
-      <% end %>
-
-      <%= if Lists.book_in_list?(
-        current_user(@conn).id,
-        has_read_list_type(),
-        @book.id
-        ) do %>
-        <%= link(gettext("Remove from Have Read"),
-          to: Routes.list_path(@conn, :remove_book_from_list, has_read_list_type(), @book.id),
-          class: cancel_btn()
-        ) %>
-      <% else %>
-        <%= link(gettext("Have Read"),
-          to: Routes.list_path(@conn, :add_book_to_list, has_read_list_type(), @book.id),
-          class: default_btn()
-        ) %>
-      <% end %>
+      <ul class="book-actions-list">
+        <li class="book-actions-wishlist">
+          <%= if Lists.book_in_list?(
+            current_user(@conn).id,
+            want_to_read_list_type(),
+            @book.id
+            ) do %>
+            <%= link(gettext("Remove from Wishlist"),
+              to:
+                Routes.list_path(
+                  @conn,
+                  :remove_book_from_list,
+                  want_to_read_list_type(),
+                  @book.id
+                ),
+              class: "book-actions-button"
+            ) %>
+          <% else %>
+            <%= link(gettext("Want to Read"),
+              to: Routes.list_path(@conn, :add_book_to_list, want_to_read_list_type(), @book.id),
+              class: "book-actions-button"
+            ) %>
+          <% end %>
+        </li>
+        <li class="book-actions-reading">
+          <%= if Lists.book_in_list?(
+            current_user(@conn).id,
+            reading_list_type(),
+            @book.id
+            ) do %>
+            <%= link(gettext("Remove from Reading"),
+              to: Routes.list_path(@conn, :remove_book_from_list, reading_list_type(), @book.id),
+              class: "book-actions-button"
+            ) %>
+          <% else %>
+            <%= link(gettext("Reading"),
+              to: Routes.list_path(@conn, :add_book_to_list, reading_list_type(), @book.id),
+              class: "book-actions-button"
+            ) %>
+          <% end %>
+        </li>
+        <li class="book-actions-have-read">
+          <%= if Lists.book_in_list?(
+            current_user(@conn).id,
+            has_read_list_type(),
+            @book.id
+            ) do %>
+            <%= link(gettext("Remove from Have Read"),
+              to: Routes.list_path(@conn, :remove_book_from_list, has_read_list_type(), @book.id),
+              class: "book-actions-button"
+            ) %>
+          <% else %>
+            <%= link(gettext("Have Read"),
+              to: Routes.list_path(@conn, :add_book_to_list, has_read_list_type(), @book.id),
+              class: "book-actions-button"
+            ) %>
+          <% end %>
+        </li>
+        <li class="book-actions-review">
+          <button id="book-actions-review-button" class="book-actions-button">
+            <%= gettext("Write a Review") %>
+          </button>
+        </li>
+      </ul>
 
       <%!-- WRITE REVIEW MODAL --%>
-      <!-- Modal Trigger -->
-      <a class={"modal-trigger " <> review_btn() } href="#write-review">
-        <%= gettext("Write a Review") %>
-      </a>
 
-      <div id="write-review" class="modal">
+      <dialog id="new-review-modal" class="modal">
         <div class="modal-content">
-          <h4>
-            <%= gettext("Review for %{title}", title: @book.title) %>
-          </h4>
-          <div class="form-group">
-            <%= form_for @review_changeset, Routes.review_path(@conn, :create, @book.id), fn f -> %>
-              <div class="input-field">
-                <%= text_input(f, :title, placeholder: gettext("Title"), class: "white gray-text") %>
+          <header class="modal-title">
+            <h4><%= gettext("Review for %{title}", title: @book.title) %></h4>
+            <button
+              id="new-review-modal-close"
+              type="button"
+              class="modal-close"
+              aria-label={gettext("close")}
+            >
+              <Heroicons.x_mark solid class="icon icon-close" />
+            </button>
+          </header>
+          <section class="new-review">
+            <%= form_for @review_changeset, Routes.review_path(@conn, :create, @book.id), [class: "form review-form"], fn f -> %>
+              <div class="form-row">
+                <%= label(f, :title, gettext("Title")) %>
+                <%= text_input(f, :title, autofocus: true) %>
                 <%= error_tag(f, :title) %>
               </div>
-              <div class="input-field">
-                <%= text_input(f, :review,
-                  placeholder: gettext("Review"),
-                  class: "white gray-text"
-                ) %>
+              <div class="form-row">
+                <%= label(f, :review, gettext("Review")) %>
+                <%= textarea(f, :review) %>
                 <%= error_tag(f, :review) %>
               </div>
-              <div class="input-field">
-                <%= number_input(f, :rating,
-                  step: 0.1,
-                  placeholder: gettext("Rating"),
-                  class: "white gray-text"
-                ) %>
+              <div class="form-row">
+                <%= label(f, :rating, gettext("Rating")) %>
+                <%= number_input(f, :rating, step: 0.1) %>
                 <%= error_tag(f, :rating) %>
+                <div class="form-field-notes">
+                  <%= gettext("Rating format: 1 - 5") %>
+                </div>
               </div>
-              <span class="helper-text">
-                <%= gettext("Rating format: 1 - 5") %>
-              </span>
-              <%= submit(gettext("Post Review"), class: default_btn() <> " right") %>
+              <div class="form-actions">
+                <%= submit(gettext("Post Review"), class: "button") %>
+              </div>
             <% end %>
-          </div>
+          </section>
         </div>
-        <div class="modal-footer">
-          <a href="#!" class="modal-close waves-effect waves-green btn-flat">
-            <%= gettext("Cancel") %>
-          </a>
-        </div>
-      </div>
+      </dialog>
     <% else %>
       <%!-- NOT LOGGED IN MODAL FOR LOGIN --%>
-      <!-- Modal Trigger -->
       <ul class="book-actions-list">
         <li class="book-actions-must-authenticate">
           <p><%= gettext("Welcome, guest!") %></p>
