Change colors and text decorations a bit

--- a/assets/css/authors-list.css
+++ b/assets/css/authors-list.css
@@ -38,7 +38,7 @@
   font-family: var(--title-font);
   font-size: var(--title-3-font-size);
   line-height: var(--title-3-leading);
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .author-item-name-link:hover {
