Fix design for account pages

--- a/lib/bookify_web/controllers/account_html/edit_password.html.heex
+++ b/lib/bookify_web/controllers/account_html/edit_password.html.heex
@@ -1,18 +1,24 @@
-<h2><%= gettext("Change Password") %></h2>
+<section class="account-edit">
+  <div class="account-avatar">
+    <img
+      src={@current_user_pic}
+      alt={gettext("%{name} profile picture", name: @current_user.name)}
+    />
+  </div>
 
-<%= form_for @changeset, Routes.account_path(@conn, :update_password), fn f -> %>
-  <div class="form-group">
-    <div class="input-field">
-      <%= password_input(f, :current_password,
-        placeholder: gettext("Current Password"),
-        class: "form-control"
-      ) %>
+  <h2 class="section-title"><%= gettext("Change Password") %></h2>
+
+  <%= form_for @changeset, Routes.account_path(@conn, :update_password), [class: "form account-password-form"], fn f -> %>
+    <div class="form-row">
+      <%= label(f, :current_password, gettext("Current Password")) %>
+      <%= password_input(f, :current_password) %>
       <%= error_tag(f, :current_password) %>
     </div>
-    <div class="input-field">
-      <%= password_input(f, :password, placeholder: gettext("Password"), class: "form-control") %>
+    <div class="form-row">
+      <%= label(f, :password, gettext("Password")) %>
+      <%= password_input(f, :password) %>
       <%= error_tag(f, :password) %>
-      <span class="helper-text">
+      <div class="form-field-notes">
         <%= gettext("Password format:") %>
         <ul>
           <li><%= gettext("At least 8 characters long") %></li>
@@ -25,16 +31,15 @@
             ) %>
           </li>
         </ul>
-      </span>
+      </div>
     </div>
-    <div class="input-field">
-      <%= password_input(f, :password_confirmation,
-        placeholder: gettext("Confirm password"),
-        class: "form-control"
-      ) %>
+    <div class="form-row">
+      <%= label(f, :password_confirmation, gettext("Confirm password")) %>
+      <%= password_input(f, :password_confirmation) %>
       <%= error_tag(f, :password_confirmation) %>
     </div>
-    <%= submit(gettext("Change Password"), class: default_btn()) %>
-    <%= link("Cancel", to: Routes.account_path(@conn, :index), class: cancel_btn()) %>
-  </div>
-<% end %>
+    <div class="form-actions">
+      <%= submit(gettext("Change Password"), class: "button") %>
+    </div>
+  <% end %>
+</section>
