--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,6 +8,7 @@
 @import "form.css";
 @import "formatted.css";
 
+@import "account.css";
 @import "auth.css";
 @import "author.css";
 @import "authors-list.css";
