--- a/lib/bookify_web/controllers/book_html/top_books.html.heex
+++ b/lib/bookify_web/controllers/book_html/top_books.html.heex
@@ -1,43 +1,47 @@
 <section>
   <h2 class="section-title"><%= gettext("Top 10 books") %></h2>
 
-  <ul class="collection">
+  <ul class="books-list">
     <%= for book <- @books do %>
-        <li class="book-item">
-          <div class="book-item-cover">
-            <%= link(to: Routes.book_path(@conn, :show, Bookify.Book.slug_with_id(book))) do %>
-              <img
-                src={book.cover_pic_url}
-                alt={gettext("%{title} cover picture", title: book.title)}
-              />
-            <% end %>
-          </div>
-          <header class="book-item-title">
-            <h4>
-              <%= link(book.title, to: Routes.book_path(@conn, :show, Bookify.Book.slug_with_id(book)), class: "book-item-title-link") %>
-            </h4>
-            <p class="book-item-author">
-              <span class="book-item-author-by"><%= gettext("by") %></span>
-              <%= book.author.name %>
-            </p>
-          </header>
-          <%= if book.avg_rating do %>
-            <p class="book-item-rating">
-              <%= raw(rating_stars(book.avg_rating)) %>
-              <%= book.avg_rating %>
-            </p>
+      <li class="book-item">
+        <div class="book-item-cover">
+          <%= link(to: Routes.book_path(@conn, :show, Bookify.Book.slug_with_id(book))) do %>
+            <img
+              src={book.cover_pic_url}
+              alt={gettext("%{title} cover picture", title: book.title)}
+            />
           <% end %>
-          <%= if RequireAdmin.user_is_admin?(current_user(@conn)) do %>
-            <div class="book-item-actions">
-              <%= link(gettext("Edit"), to: Routes.book_path(@conn, :edit, book.id), class: "button") %>
-              <%= link(gettext("Delete"),
-                to: Routes.book_path(@conn, :delete, book.id),
-                method: :delete,
-                data: [confirm: gettext("Are you sure?")],
-                class: "button") %>
-            </div>
-          <%= end %>
-        </li>
+        </div>
+        <header class="book-item-title">
+          <h4>
+            <%= link(book.title,
+              to: Routes.book_path(@conn, :show, Bookify.Book.slug_with_id(book)),
+              class: "book-item-title-link"
+            ) %>
+          </h4>
+          <p class="book-item-author">
+            <span class="book-item-author-by"><%= gettext("by") %></span>
+            <%= book.author.name %>
+          </p>
+        </header>
+        <%= if book.avg_rating do %>
+          <p class="book-item-rating">
+            <%= raw(rating_stars(book.avg_rating)) %>
+            <%= book.avg_rating %>
+          </p>
+        <% end %>
+        <%= if RequireAdmin.user_is_admin?(current_user(@conn)) do %>
+          <div class="book-item-actions">
+            <%= link(gettext("Edit"), to: Routes.book_path(@conn, :edit, book.id), class: "button") %>
+            <%= link(gettext("Delete"),
+              to: Routes.book_path(@conn, :delete, book.id),
+              method: :delete,
+              data: [confirm: gettext("Are you sure?")],
+              class: "button"
+            ) %>
+          </div>
+        <% end %>
+      </li>
     <% end %>
   </ul>
 </section>
