--- a/lib/bookify_web/controllers/admin_html/show.html.heex
+++ b/lib/bookify_web/controllers/admin_html/show.html.heex
@@ -38,7 +38,7 @@
             </p>
           </header>
           <article class="review-item-content formatted">
-            <%= raw(Earmark.as_html!(review.review)) %>
+            <%= raw(Earmark.as_html!(review.review || "")) %>
           </article>
           <div class="review-item-actions">
             <%= link(gettext("Delete"),
