--- a/lib/bookify_web/controllers/admin_html/reviews.html.heex
+++ b/lib/bookify_web/controllers/admin_html/reviews.html.heex
@@ -21,7 +21,7 @@
           </p>
         </header>
         <article class="review-item-content formatted">
-          <%= raw(Earmark.as_html!(review.review)) %>
+          <%= raw(Earmark.as_html!(review.review || "")) %>
         </article>
         <div class="review-item-actions">
           <%= link(gettext("Delete"),
