Book form update

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -22,5 +22,6 @@
 @import "new-review.css";
 @import "reviews-list.css";
 @import "search.css";
+@import "update-book.css";
 @import "user.css";
 @import "users-list.css";
