Add material icons stars

--- a/lib/bookify_web/components/layouts/root.html.heex
+++ b/lib/bookify_web/components/layouts/root.html.heex
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/images/icon.png ">
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <%= @inner_content %>
