--- a/lib/bookify_web/controllers/book_html/index.html.heex
+++ b/lib/bookify_web/controllers/book_html/index.html.heex
@@ -36,7 +36,9 @@
         <%= if book.avg_rating do %>
           <p class="book-item-rating">
             <%= raw(rating_stars(book.avg_rating)) %>
-            <%= round_to_two_decimal_places(book.avg_rating) %>
+            <span class="book-item-rating-average">
+              <%= round_to_two_decimal_places(book.avg_rating) %>
+            </span>
           </p>
         <% end %>
         <%= if RequireAdmin.user_is_admin?(current_user(@conn)) do %>
