Rename author_pic_url -> image_url

--- a/lib/bookify_web/controllers/author_html/edit.html.heex
+++ b/lib/bookify_web/controllers/author_html/edit.html.heex
@@ -13,11 +13,11 @@
       <%= error_tag(f, :bio) %>
     </div>
     <div class="input-field">
-      <%= text_input(f, :author_pic_url,
+      <%= text_input(f, :image_url,
         placeholder: gettext("Author picture URL"),
         class: "form-control"
       ) %>
-      <%= error_tag(f, :author_pic_url) %>
+      <%= error_tag(f, :image_url) %>
     </div>
     <div class="input-field">
       <%= text_input(f, :wikipedia_url,
