--- a/lib/bookify_web/controllers/author_html/show.html.heex
+++ b/lib/bookify_web/controllers/author_html/show.html.heex
@@ -1,6 +1,6 @@
 <section class="author">
   <div class="author-photo">
-    <img src={@author.author_pic_url} alt={gettext("%{name} picture", name: @author.name)} />
+    <img src={@author.image_url} alt={gettext("%{name} picture", name: @author.name)} />
   </div>
   <header class="author-name">
     <h2><%= @author.name %></h2>
